stylesheet/style.css
body {
	background-color: darkseagreen;
}

img {
	width: 16%;
}

table {
	text-align: left;
	width: 100%;
	background-color: slategrey;
	border-collapse: collapse;
	border-left: 3px solid blue;
	border-radius: 3px;
}

h1,h2,h3,h4 {
	color: purple;
	text-align: left;
}

h5 {
	color: green;
	text-align: left;
}

p {
	font-family: verdana;
	font-size: 11px;
}

.flash_button {
	background:purple;
	padding:1px 3px;
	color:#fff;
	border:none;
	border-radius:3px;

	animation-name: flash;
	animation-duration: 1s;
	animation-timing-function: linear;
	animation-iteration-count: infinite;
}

@keyframes flash {
	0% { opacity: 1.0; }
	50% { opacity: 0.5; }
	100% { opacity: 1.0; }
}

.footer {
	position: fixed;
	left: 0;
	bottom: 0;
	text-align: center;
	width: 100%;
	color: purple;
}

.outer {
	width: 100%;
}

.inner {
	position: relative;
	max-width: 600px;
	padding: 10px 5px;
	margin: 0 auto;
	top: 66px;
	z-index: -1;
}

.topright {
	position: fixed;
	top:0;
	text-align: right;
	right:0;
}
.navbar {
	position: fixed;
	top:0;
	width: 100%;
	background-color: cadetblue;
	opacity: 0.95;
	left:0;
}

